--- a/6_3_CodificacionReal.ipynb
+++ b/6_3_CodificacionReal.ipynb
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8d684cd4",
+   "id": "48992011",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "db9146ba",
+   "id": "00c8d5e1",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a6708abe",
+   "id": "245c5e22",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f7b243d",
+   "id": "44a4b069",
    "metadata": {},
    "source": [
     "| Ventajas del escalamiento en codificación real | Descripción                                              |\n",
@@ -156,20 +156,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f07f98b",
+   "id": "896a03a2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "30afe66e",
+   "id": "01261a2d",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b42283fd",
+   "id": "6d2a8e96",
    "metadata": {},
    "source": [
     "## Operadores genéticos para representación real\n",
@@ -200,14 +200,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fa5c1fc",
+   "id": "ffd1589f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "cca213a4",
+   "id": "85c41bc0",
    "metadata": {},
    "source": [
     "### Operador de mutación uniforme"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "afa70c3d",
+   "id": "e48d88b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5f74396",
+   "id": "64f559cf",
    "metadata": {},
    "source": [
     "### Ejercicio, mutar varios individuos."
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "2bf53a63",
+   "id": "42873514",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,16 +279,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92cde6c5",
+   "id": "14f11185",
    "metadata": {},
    "source": [
-    "Aprovechar para hablar de los hiperparámetros de los algoritmso de aprendizaje automático, en general."
+    "Aprovechar para hablar de los hiperparámetros de los algoritmso de aprendizaje automático, en general.\n",
+    "\n",
+    "### Hiperparámetros en los algoritmos genéticos\n",
+    "\n",
+    "| Hiperparámetro | Descripción |\n",
+    "| :--- | :--- |\n",
+    "| **Tamaño de la población** | Número de individuos en cada generación de la población. |\n",
+    "| **Número máximo de generaciones** | Número máximo de iteraciones o generaciones del algoritmo genético. |\n",
+    "| **Tasa de cruce** | Probabilidad de que ocurra un cruce entre dos individuos en el proceso de reproducción. |\n",
+    "| **Tasa de mutación** | Probabilidad de que ocurra una mutación en un gen individual durante la reproducción. |\n",
+    "| **Método de selección** | Método utilizado para seleccionar individuos para la reproducción. |\n",
+    "| **Estrategia de reemplazo** | Cómo se seleccionan los individuos para ser reemplazados en cada generación. |\n",
+    "| **Parámetros específicos del problema** | Hiperparámetros adicionales específicos del dominio del problema. |\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "59f89b12",
+   "id": "a2ef272a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "788e2b07",
+   "id": "577d4519",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "bd3f3940",
+   "id": "25043ce5",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86864993",
+   "id": "66a154fa",
    "metadata": {},
    "source": [
     "### Práctica: Mejorar la solución moviendo hiperparámetros."
@@ -404,14 +416,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eebe0151",
+   "id": "d22609df",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0fdbf868",
+   "id": "84f9e5bc",
    "metadata": {},
    "source": [
     "## Regresando al problema de la mochila\n",
@@ -432,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5156d97",
+   "id": "a46757c6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -440,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "9007ac60",
+   "id": "0db3713f",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "5a9f1c37",
+   "id": "d4ca203a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "9f6ecbf4",
+   "id": "30c7965a",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "26dfc94e",
+   "id": "7d44a441",
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9963eb1",
+   "id": "5044d03d",
    "metadata": {},
    "source": [
     "### Ejercicio, optimizar otra función objetivo con codificación real."
@@ -635,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f6a85ee",
+   "id": "c074127e",
    "metadata": {},
    "outputs": [],
    "source": []
