--- a/6_4_CodificacionEntera.ipynb
+++ b/6_4_CodificacionEntera.ipynb
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8c8d4044",
+   "id": "8dfdae4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a0153565",
+   "id": "beb45e9a",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8688d2a",
+   "id": "37418cd0",
    "metadata": {},
    "source": [
     "| Ventajas | Descripción |\n",
@@ -123,14 +123,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "184c68dc",
+   "id": "7ed0fea6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "82919a89",
+   "id": "721d6e81",
    "metadata": {},
    "source": [
     "## Operadores genéticos para representación entera\n",
@@ -156,17 +156,48 @@
     "**Usaremos la cruza de un punto.**\n",
     "\n",
     "![](https://www.tutorialspoint.com/genetic_algorithms/images/one_point_crossover.jpg)\n",
-    " \n",
+    "Fuente: tutorialspoints.com\n",
     " \n",
     "#### Ejercicio: Implementar operador de cruza de un punto y aplicar a dos pares de padres diferentes.\n",
-    "\n",
-    "4.2.2 Operador de mutación"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1978a216",
+   "id": "c6d6aae0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bcc6ac7",
+   "metadata": {},
+   "source": [
+    "### Operador de mutación uniforme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c266b7ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def mutacion_uniforme(individual, min_val, max_val, mutation_rate=0.01):\n",
+    "    for i in range(len(individual)):\n",
+    "        if random.random() < mutation_rate:\n",
+    "            individual[i] = random.randint(min_val, max_val)\n",
+    "    return individual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "584d3ff6",
    "metadata": {},
    "outputs": [],
    "source": []
