--- a/6_3_CodificacionReal.ipynb
+++ b/6_3_CodificacionReal.ipynb
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "48992011",
+   "id": "9d4c01b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "00c8d5e1",
+   "id": "1d90b6ca",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "245c5e22",
+   "id": "ec34c346",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44a4b069",
+   "id": "43fbaabe",
    "metadata": {},
    "source": [
     "| Ventajas del escalamiento en codificación real | Descripción                                              |\n",
@@ -156,20 +156,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "896a03a2",
+   "id": "a48729ea",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "01261a2d",
+   "id": "0e0690c7",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "6d2a8e96",
+   "id": "b74a0930",
    "metadata": {},
    "source": [
     "## Operadores genéticos para representación real\n",
@@ -200,14 +200,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffd1589f",
+   "id": "bc0871e5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "85c41bc0",
+   "id": "087651b2",
    "metadata": {},
    "source": [
     "### Operador de mutación uniforme"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "e48d88b9",
+   "id": "7db11a40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64f559cf",
+   "id": "e8cbee2b",
    "metadata": {},
    "source": [
     "### Ejercicio, mutar varios individuos."
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "42873514",
+   "id": "78816e94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14f11185",
+   "id": "625d3641",
    "metadata": {},
    "source": [
     "Aprovechar para hablar de los hiperparámetros de los algoritmso de aprendizaje automático, en general.\n",
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "a2ef272a",
+   "id": "013f86d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "577d4519",
+   "id": "f9bd3701",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "25043ce5",
+   "id": "1fc1227f",
    "metadata": {},
    "outputs": [
     {
@@ -407,23 +407,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66a154fa",
+   "id": "2429cfd0",
    "metadata": {},
    "source": [
-    "### Práctica: Mejorar la solución moviendo hiperparámetros."
+    "### Práctica: Mejorar la solución moviendo hiperparámetros y describir observaciones sobre cómo mejora o empeora al cambiar determinados hiperparámetros."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d22609df",
+   "id": "f1b46ad4",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "84f9e5bc",
+   "id": "8bb5f233",
    "metadata": {},
    "source": [
     "## Regresando al problema de la mochila\n",
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a46757c6",
+   "id": "4a514e55",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "0db3713f",
+   "id": "c024419e",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "d4ca203a",
+   "id": "60027439",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "30c7965a",
+   "id": "07d8689b",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "7d44a441",
+   "id": "94f5fc4e",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5044d03d",
+   "id": "59e0c8d7",
    "metadata": {},
    "source": [
     "### Ejercicio, optimizar otra función objetivo con codificación real."
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c074127e",
+   "id": "64c8ef7d",
    "metadata": {},
    "outputs": [],
    "source": []
