--- a/6_4_CodificacionEntera.ipynb
+++ b/6_4_CodificacionEntera.ipynb
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "485b36db",
+   "id": "43e6eb3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b754f560",
+   "id": "067a9092",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,76 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfbdc584",
+   "id": "3a4a6600",
+   "metadata": {},
+   "source": [
+    "#### Probando alguna mejora"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "02b4143c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Codificación y decodificación de los cromosomas\n",
+    "def encode_integer2(x, lower_bound, upper_bound):\n",
+    "    \"\"\"Codifica un valor real en un valor entero dentro de los límites dados\"\"\"\n",
+    "    return int(round((x - lower_bound) / (upper_bound - lower_bound) * (2**32 - 1)))\n",
+    "\n",
+    "def decode_integer2(x, lower_bound, upper_bound):\n",
+    "    \"\"\"Decodifica un valor entero en un valor real dentro de los límites dados\"\"\"\n",
+    "    return lower_bound + x * (upper_bound - lower_bound) / (2**32 - 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "2dc1e3a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor real codificado: 2822134963\n",
+      "Valor decodificado: 3.141590001327355\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Vamos a codificar y decodificar un número real dentro del rango de -10 a 10\n",
+    "\n",
+    "# Valores de los límites\n",
+    "lower_bound = -10\n",
+    "upper_bound = 10\n",
+    "\n",
+    "# Valor real a codificar\n",
+    "real_value = 3.14159\n",
+    "\n",
+    "# Codificar el valor real\n",
+    "encoded_value = encode_integer2(real_value, lower_bound, upper_bound)\n",
+    "print(f\"Valor real codificado: {encoded_value}\")\n",
+    "\n",
+    "# Ahora decodificamos el valor codificado\n",
+    "decoded_value = decode_integer2(encoded_value, lower_bound, upper_bound)\n",
+    "print(f\"Valor decodificado: {decoded_value}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "102720af",
+   "metadata": {},
+   "source": [
+    "En el contexto de las codificaciones en algoritmos genéticos, la multiplicación o división por $(2^{32} - 1)$ se utiliza para mapear un valor real dentro de un rango determinado a un valor entero en el rango permitido por la representación de cromosomas en el algoritmo genético.\n",
+    "\n",
+    "La multiplicación por $(2^{32} - 1)$ se utiliza en la función encode_integer para codificar un valor real en un valor entero. La expresión $(2^{32} - 1)$ representa el rango máximo de valores enteros que se pueden representar utilizando 32 bits, que es comúnmente utilizado en la representación de cromosomas en algoritmos genéticos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39388d15",
    "metadata": {},
    "source": [
     "| Ventajas | Descripción |\n",
@@ -121,14 +190,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20269caa",
+   "id": "201914f8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b393a028",
+   "id": "3a45ef3c",
    "metadata": {},
    "source": [
     "## Operadores genéticos para representación entera\n",
@@ -163,14 +232,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "299f840b",
+   "id": "644aaa29",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "5182f961",
+   "id": "0bc4a37a",
    "metadata": {},
    "source": [
     "### Operador de mutación uniforme"
@@ -179,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f023de07",
+   "id": "cfb1f21b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21b0f252",
+   "id": "c345f0a4",
    "metadata": {},
    "source": [
     "#### Ejercicio: mutar varios individuos"
@@ -203,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "a6242578",
+   "id": "03c93eb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a982c55f",
+   "id": "edc3b330",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "34b00999",
+   "id": "7cab5517",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c2296b69",
+   "id": "7aa47b44",
    "metadata": {},
    "outputs": [
     {
@@ -352,16 +421,189 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b6597f2",
+   "id": "d2bf0fb5",
    "metadata": {},
    "source": [
-    "### Ejercicio: Mejorar la solución moviendo hiperparámetros"
+    "### Ejercicio: ¿Qué está pasando? Mejorar la solución moviendo hiperparámetros"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc32ad81",
+   "id": "89c9c2e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "f3cd59ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mejor solución encontrada:\n",
+      "Objeto 1: Valor = 10, Peso = 5, Frecuencia = 3\n",
+      "Objeto 2: Valor = 20, Peso = 10, Frecuencia = 2\n",
+      "Objeto 3: Valor = 30, Peso = 15, Frecuencia = 1\n",
+      "Objeto 4: Valor = 40, Peso = 20, Frecuencia = 0\n",
+      "Objeto 5: Valor = 50, Peso = 25, Frecuencia = 0\n",
+      "Fitness: 100\n",
+      "Mejor individuo: [3, 2, 1, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "def init_population_integer(pop_size, num_objects):\n",
+    "    \"\"\"Inicializa una población con codificación entera\"\"\"\n",
+    "    population = []\n",
+    "    for _ in range(pop_size):\n",
+    "        individual = [random.randint(0, 5) for _ in range(num_objects)]\n",
+    "        population.append(individual)\n",
+    "    return population\n",
+    "\n",
+    "def tournament_selection(population, objects, capacity, tournament_size):\n",
+    "    \"\"\"Realiza la selección de padres utilizando el método de torneo\"\"\"\n",
+    "    selected_parents = []\n",
+    "    for _ in range(2):  # Seleccionar 2 padres\n",
+    "        tournament = random.sample(population, tournament_size)\n",
+    "        best_individual = None\n",
+    "        best_fitness = -1\n",
+    "        for individual in tournament:\n",
+    "            fitness = evaluate_individual_integer(individual, objects, capacity)\n",
+    "            if fitness > best_fitness:\n",
+    "                best_individual = individual\n",
+    "                best_fitness = fitness\n",
+    "        selected_parents.append(best_individual)\n",
+    "    return selected_parents\n",
+    "\n",
+    "def evaluate_individual_integer(individual, objects, capacity):\n",
+    "    \"\"\"Evalúa el fitness de un individuo codificado con enteros en el problema de la mochila\"\"\"\n",
+    "    total_value = 0\n",
+    "    total_weight = 0\n",
+    "    for i, freq in enumerate(individual):\n",
+    "        total_value += objects[i][\"valor\"] * freq\n",
+    "        total_weight += objects[i][\"peso\"] * freq\n",
+    "    if total_weight > capacity:\n",
+    "        return 0  # Penalización por exceder la capacidad de la mochila\n",
+    "    else:\n",
+    "        return total_value\n",
+    "\n",
+    "# Codificación y decodificación de los cromosomas\n",
+    "def encode_integer(x, lower_bound, upper_bound):\n",
+    "    \"\"\"Codifica un valor real en un valor entero dentro de los límites dados\"\"\"\n",
+    "    return int(round((x - lower_bound) / (upper_bound - lower_bound) * (2**32 - 1)))\n",
+    "\n",
+    "def decode_integer(x, lower_bound, upper_bound):\n",
+    "    \"\"\"Decodifica un valor entero en un valor real dentro de los límites dados\"\"\"\n",
+    "    return lower_bound + x * (upper_bound - lower_bound) / (2**32 - 1)\n",
+    "\n",
+    "# Operador de cruza de un punto\n",
+    "def cruce_un_punto(parent1, parent2):\n",
+    "    punto = random.randint(1, len(parent1) - 1)\n",
+    "    child1 = parent1[:punto] + parent2[punto:]\n",
+    "    child2 = parent2[:punto] + parent1[punto:]\n",
+    "    return child1, child2\n",
+    "\n",
+    "# Operador de mutación uniforme\n",
+    "def mutacion_uniforme(individual, min_val, max_val, mutation_rate=0.01):\n",
+    "    for i in range(len(individual)):\n",
+    "        if random.random() < mutation_rate:\n",
+    "            individual[i] = random.randint(min_val, max_val)\n",
+    "    return individual\n",
+    "\n",
+    "# Función principal del algoritmo genético\n",
+    "def genetic_algorithm(objects, capacity, pop_size, num_generations, mutation_rate, tournament_size):\n",
+    "    # Inicialización de la población\n",
+    "    num_objects = len(objects)\n",
+    "    population = init_population_integer(pop_size, num_objects)\n",
+    "    best_individual = None\n",
+    "    best_fitness = -1\n",
+    "    \n",
+    "    # Evolución de la población\n",
+    "    for i in range(num_generations):\n",
+    "        # Selección de padres\n",
+    "        parent1, parent2 = tournament_selection(population, objects, capacity, tournament_size)\n",
+    "        \n",
+    "        # Cruce\n",
+    "        child1, child2 = cruce_un_punto(parent1, parent2)\n",
+    "        \n",
+    "        # Mutación\n",
+    "        child1 = mutacion_uniforme(child1, 0, 5, mutation_rate)\n",
+    "        child2 = mutacion_uniforme(child2, 0, 5, mutation_rate)\n",
+    "        \n",
+    "        # Evaluación de la descendencia\n",
+    "        child1_fitness = evaluate_individual_integer(child1, objects, capacity)\n",
+    "        child2_fitness = evaluate_individual_integer(child2, objects, capacity)\n",
+    "        \n",
+    "        # Reemplazo de la peor solución de la población con la mejor descendencia\n",
+    "        population.sort(key=lambda x: evaluate_individual_integer(x, objects, capacity))\n",
+    "        if child1_fitness > child2_fitness:\n",
+    "            if child1_fitness > evaluate_individual_integer(population[0], objects, capacity):\n",
+    "                population[0] = child1\n",
+    "                if child1_fitness > best_fitness:\n",
+    "                    best_individual = child1\n",
+    "                    best_fitness = child1_fitness\n",
+    "        else:\n",
+    "            if child2_fitness > evaluate_individual_integer(population[0], objects, capacity):\n",
+    "                population[0] = child2\n",
+    "                if child2_fitness > best_fitness:\n",
+    "                    best_individual = child2\n",
+    "                    best_fitness = child2_fitness\n",
+    "    \n",
+    "    # Devolución de la mejor solución encontrada\n",
+    "    return (best_individual, best_fitness)\n",
+    "\n",
+    "# Definición de los objetos y sus propiedades (valor y peso)\n",
+    "objects = [\n",
+    "    {\"valor\": 10, \"peso\": 5},\n",
+    "    {\"valor\": 20, \"peso\": 10},\n",
+    "    {\"valor\": 30, \"peso\": 15},\n",
+    "    {\"valor\": 40, \"peso\": 20},\n",
+    "    {\"valor\": 50, \"peso\": 25}\n",
+    "]\n",
+    "\n",
+    "# Capacidad máxima de la mochila\n",
+    "capacity = 50\n",
+    "\n",
+    "# Parámetros del algoritmo genético\n",
+    "pop_size = 1000\n",
+    "num_generations = 100\n",
+    "mutation_rate = 0.01\n",
+    "tournament_size = 5\n",
+    "\n",
+    "# Resolver el problema de la mochila utilizando el algoritmo genético\n",
+    "best_individual, best_fitness = genetic_algorithm(objects, capacity, pop_size, num_generations, mutation_rate, tournament_size)\n",
+    "\n",
+    "# Imprimir la mejor solución encontrada\n",
+    "print(\"Mejor solución encontrada:\")\n",
+    "for i, obj in enumerate(objects):\n",
+    "    index = i % len(best_individual)\n",
+    "    freq = best_individual[index]\n",
+    "    print(f\"Objeto {i+1}: Valor = {obj['valor']}, Peso = {obj['peso']}, Frecuencia = {freq}\")\n",
+    "print(\"Fitness:\", best_fitness)\n",
+    "print(\"Mejor individuo:\", best_individual)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dce9b21b",
+   "metadata": {},
+   "source": [
+    "### Práctica. Probar código y algoritmo genético con otros objetos y describir los resultados de lo que podría guardarse en la mochila. Describir ventajas de utilizar codificación entera en comparación con la binaria."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63e420eb",
    "metadata": {},
    "outputs": [],
    "source": []
