--- a/6_4_CodificacionEntera.ipynb
+++ b/6_4_CodificacionEntera.ipynb
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "43e6eb3d",
+   "id": "7b041817",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "067a9092",
+   "id": "7f20a93e",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a4a6600",
+   "id": "05f13785",
    "metadata": {},
    "source": [
     "#### Probando alguna mejora"
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "02b4143c",
+   "id": "56bca18f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "2dc1e3a0",
+   "id": "b74dae2c",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "102720af",
+   "id": "fff7d004",
    "metadata": {},
    "source": [
     "En el contexto de las codificaciones en algoritmos genéticos, la multiplicación o división por $(2^{32} - 1)$ se utiliza para mapear un valor real dentro de un rango determinado a un valor entero en el rango permitido por la representación de cromosomas en el algoritmo genético.\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39388d15",
+   "id": "6a45c69b",
    "metadata": {},
    "source": [
     "| Ventajas | Descripción |\n",
@@ -190,14 +190,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "201914f8",
+   "id": "77cbb27e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3a45ef3c",
+   "id": "851d4b9e",
    "metadata": {},
    "source": [
     "## Operadores genéticos para representación entera\n",
@@ -232,14 +232,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "644aaa29",
+   "id": "1fc40192",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0bc4a37a",
+   "id": "b89c07b4",
    "metadata": {},
    "source": [
     "### Operador de mutación uniforme"
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cfb1f21b",
+   "id": "7434df41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c345f0a4",
+   "id": "0db91553",
    "metadata": {},
    "source": [
     "#### Ejercicio: mutar varios individuos"
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "03c93eb4",
+   "id": "e1c7fe6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "edc3b330",
+   "id": "6946c281",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "7cab5517",
+   "id": "f439c9ba",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "7aa47b44",
+   "id": "54cbc78f",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2bf0fb5",
+   "id": "6902cd5a",
    "metadata": {},
    "source": [
     "### Ejercicio: ¿Qué está pasando? Mejorar la solución moviendo hiperparámetros"
@@ -430,15 +430,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89c9c2e6",
+   "id": "8e9f23f0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "66f794f0",
+   "metadata": {},
+   "source": [
+    "## Va de nuevo el problema de la mochila\n",
+    "\n",
+    "![](https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Knapsack.svg/729px-Knapsack.svg.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "f3cd59ba",
+   "id": "5cddbd62",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dce9b21b",
+   "id": "7eb04917",
    "metadata": {},
    "source": [
     "### Práctica. Probar código y algoritmo genético con otros objetos y describir los resultados de lo que podría guardarse en la mochila. Describir ventajas de utilizar codificación entera en comparación con la binaria."
@@ -603,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63e420eb",
+   "id": "f889cb82",
    "metadata": {},
    "outputs": [],
    "source": []
