--- a/6_4_DEAP.ipynb
+++ b/6_4_DEAP.ipynb
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "c69fae7e",
+   "id": "2318ac84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,9 +65,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af303329",
+   "metadata": {},
+   "source": [
+    "## Definiendo métodos y clases que se usarán más adelante"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "0f673861",
+   "id": "0f63bdfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "33d8f94b",
+   "id": "7693a572",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "c1f26af9",
+   "id": "7245444d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e985644d",
+   "id": "b2ba5f74",
    "metadata": {},
    "source": [
     "## The OneMax problem"
@@ -326,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "b2a34bd5",
+   "id": "2c4ded7c",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "7179da7c",
+   "id": "734c8a64",
    "metadata": {},
    "outputs": [
     {
@@ -669,16 +677,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c04853b",
+   "id": "33868da3",
    "metadata": {},
    "source": [
-    "### Mochila"
+    "## Mochila\n",
+    "\n",
+    "![](https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Knapsack.svg/375px-Knapsack.svg.png)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "4bdc7bff",
+   "id": "42308dd5",
    "metadata": {},
    "outputs": [
     {
@@ -882,16 +892,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d25e2163",
+   "id": "2b55d5c1",
    "metadata": {},
    "source": [
-    "## 8 reinas"
+    "## 8 reinas\n",
+    "![](https://codeahoy.com/img/books/recursion/n-queen-problem.png)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "f3e21ce5",
+   "id": "6e6d2721",
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c752fa4d",
+   "id": "f60d1c75",
    "metadata": {},
    "source": [
     "## Optimización de funciones"
@@ -1650,7 +1661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "304696a2",
+   "id": "3cd7325a",
    "metadata": {},
    "outputs": [],
    "source": []
