--- a/6_4_DEAP.ipynb
+++ b/6_4_DEAP.ipynb
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "2318ac84",
+   "id": "663b4468",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af303329",
+   "id": "852b0fe6",
    "metadata": {},
    "source": [
     "## Definiendo métodos y clases que se usarán más adelante"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "0f63bdfe",
+   "id": "6eb911dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "7693a572",
+   "id": "369dc830",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "7245444d",
+   "id": "fd09caae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2ba5f74",
+   "id": "8bb5903b",
    "metadata": {},
    "source": [
     "## The OneMax problem"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "2c4ded7c",
+   "id": "18ee3988",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "734c8a64",
+   "id": "faa07b32",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33868da3",
+   "id": "1695e509",
    "metadata": {},
    "source": [
     "## Mochila\n",
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "42308dd5",
+   "id": "0a514333",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b55d5c1",
+   "id": "b3711a08",
+   "metadata": {},
+   "source": [
+    "### Ejercicio: Experimentar numéricamente con los hiperparámetros."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f7c650e",
    "metadata": {},
    "source": [
     "## 8 reinas\n",
@@ -902,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "6e6d2721",
+   "id": "c1e050d8",
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1182,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f60d1c75",
+   "id": "3a878cf3",
+   "metadata": {},
+   "source": [
+    "## Ejercicio: Optimizar con dos diferentes número de reinas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "717e8bfa",
    "metadata": {},
    "source": [
     "## Optimización de funciones"
@@ -1651,17 +1667,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e2274390",
+   "metadata": {},
+   "source": [
+    "## Ejercicio: Optimizar otras dos funciones"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e1b545e",
+   "id": "3f4a1da4",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "992e58e8",
+   "metadata": {},
+   "source": [
+    "### Ejercicio: Describe el flujo general de un algoritmo genético implementado con la librería DEAP."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cd7325a",
+   "id": "ea1d2ce7",
    "metadata": {},
    "outputs": [],
    "source": []
