--- a/6_4_DEAP.ipynb
+++ b/6_4_DEAP.ipynb
@@ -15,6 +15,8 @@
     "\n",
     "- Repositorio: https://github.com/deap/deap\n",
     "\n",
+    "Libro Hands-On Genetic Algorithms with Python: https://github.com/PacktPublishing/Hands-On-Genetic-Algorithms-with-Python\n",
+    "\n",
     "\n",
     "#### Explorar documentación"
    ]
