--- a/6_5_Multiobjetivo.ipynb
+++ b/6_5_Multiobjetivo.ipynb
@@ -29,6 +29,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "22ef788c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install deap"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "id": "85be7a7d",
    "metadata": {},
@@ -43,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3250dbc2",
+   "id": "586db975",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9fb4d4d0",
+   "id": "69a3ee70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "cbac8f01",
+   "id": "0aca757f",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "94410003",
+   "id": "893de4fc",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a6549a3",
+   "id": "977450a0",
    "metadata": {},
    "source": [
     "## Dos funciones que se comporten parecido"
@@ -231,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d05e3b3c",
+   "id": "966a25ab",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8addae78",
+   "id": "825c350f",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "cedb1fe5",
+   "id": "efc28f36",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f8197fce",
+   "id": "04e9bd20",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +596,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b376fbf5",
+   "id": "c336a9e4",
+   "metadata": {},
+   "source": [
+    "### Ejercicio: Definir otras dos funciones objetivo y graficar su frente de Pareto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "763a8e48",
    "metadata": {},
    "source": [
     "## Ejemplo de https://github.com/Dany503/Algoritmos-Geneticos-en-Python-Un-Enfoque-Practico/tree/master/Cap4\n",
@@ -620,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "28998980",
+   "id": "f500d94c",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "f73497de",
+   "id": "a383c7b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d45d8f87",
+   "id": "ddee7a34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c57c2e1d",
+   "id": "dbce593f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "38f4ddfa",
+   "id": "e4236c22",
    "metadata": {},
    "outputs": [
     {
@@ -809,9 +827,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7baf22a",
+   "metadata": {},
+   "source": [
+    "## Ejercicio: Modificar parámetros y graficar diferentes frentes de Pareto. Anotar observaciones.\n",
+    "\n",
+    "\n",
+    "## Practica: Cambiar las dos funciones objetivo. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6061ac46",
+   "id": "94022ed4",
    "metadata": {},
    "outputs": [],
    "source": []
