--- a/6_4_DEAP.ipynb
+++ b/6_4_DEAP.ipynb
@@ -928,12 +928,15 @@
    "metadata": {},
    "source": [
     "## 8 reinas\n",
-    "![](https://codeahoy.com/img/books/recursion/n-queen-problem.png)"
+    "![](https://codeahoy.com/img/books/recursion/n-queen-problem.png)\n",
+    "\n",
+    "Violación:\n",
+    "![](https://raw.githubusercontent.com/igomezv/ComputoEvolutivo/main/img/8damas_viol.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "c1e050d8",
    "metadata": {},
    "outputs": [
