--- a/6_5_Multiobjetivo.ipynb
+++ b/6_5_Multiobjetivo.ipynb
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "bc141cf8",
+   "id": "9041b9e9",
    "metadata": {},
    "outputs": [
     {
@@ -742,9 +742,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb9a9670",
+   "metadata": {},
+   "source": [
+    "### Con operadores de selección y algoritmo genético especiales para problemas multiobjetivo"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "1f8ffd73",
+   "execution_count": 34,
+   "id": "cf34645f",
    "metadata": {},
    "outputs": [
     {
