--- a/6_5_Multiobjetivo.ipynb
+++ b/6_5_Multiobjetivo.ipynb
@@ -590,9 +590,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42283f3a",
+   "metadata": {},
+   "source": [
+    "#### Usando AG simple el frente de Pareto no se logra del todo bien:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "9041b9e9",
+   "id": "c449f7d5",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb9a9670",
+   "id": "593195b0",
    "metadata": {},
    "source": [
     "### Con operadores de selección y algoritmo genético especiales para problemas multiobjetivo"
@@ -752,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "cf34645f",
+   "id": "5c919914",
    "metadata": {},
    "outputs": [
     {
